# Software_Rasterization

./: CMakeLists.txt  CMakePresets.json
src/: buffer.hpp  color.hpp  event.cpp  event.hpp  framebuffer.hpp  input.cpp  input.hpp  main.cpp  math_util.hpp  matrix.hpp  renderer.hpp  shader_program.hpp  timer.cpp  timer.hpp  types.hpp  varying.hpp  vector.hpp  window.cpp  window.hpp
